# rust-chatbot-service

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  dockerFile
src/: agent.rs  agent_v2.rs  azure_table.rs  main.rs  telegram.rs
