[package]
name = "chatbot-service"
version = "0.1.0"
edition = "2021"
authors = ["salim4n <laimeche160@gmail.com>"]


[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing-subscriber = "0.3.19"
axum = "0.8.1"
azure_storage = "0.21.0"
azure_data_tables = "0.21.0"
futures = "0.3.31"
azure_core = "0.21.0"
dotenv = "0.15.0"
langchain-rust = { version = "4.6.0", features = ["fastembed"] }
serde_json = "1.0.134"
anyhow = "1.0.95"
ndarray = "0.16.1"
